--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,6 @@
 [submodule "BlueSTSDK"]
 	path = BlueSTSDK
 	url = https://github.com/STMicroelectronics-CentralLabs/BlueSTSDK_Android.git
-[submodule "BlueSTSDK_GUI_Android"]
-	path = BlueSTSDK_GUI_Android
+[submodule "BlueSTSDK_Gui_Android"]
+	path = BlueSTSDK_Gui_Android
 	url = https://github.com/STMicroelectronics-CentralLabs/BlueSTSDK_GUI_Android.git
