--- a/BlueMS/build.gradle
+++ b/BlueMS/build.gradle
@@ -60,8 +60,8 @@ android {
     defaultConfig {
         //19 since we need the setpin api
         minSdkVersion 19
-        versionCode 12
-        versionName '3.5.1'
+        versionCode 13
+        versionName '3.6'
         applicationId "com.st.bluems"
         targetSdkVersion rootProject.ext.targetSdkVersion
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
@@ -101,6 +101,7 @@ android {
 
 }
 
+
 dependencies {
     compile fileTree(include: '*.jar', dir: 'libs')
     compile project(':BlueSTSDK')
@@ -113,6 +114,7 @@ dependencies {
     compile "com.android.support:support-v13:$rootProject.supportLibraryVersion"
     compile "com.android.support:design:$rootProject.supportLibraryVersion"
 
+
     //necessary for ProviderInstaller.installIfNeeded for enable tls1.2 on android 4.4@samsung s4
     compile 'com.google.android.gms:play-services-base:11.0.2'
 
@@ -124,26 +126,18 @@ dependencies {
     testCompile "junit:junit:$rootProject.junitVersion"
     testCompile "org.mockito:mockito-core:$rootProject.mockitoVersion"
 
-    androidTestCompile "junit:junit:$rootProject.junitVersion"
-    androidTestCompile "org.mockito:mockito-core:$rootProject.mockitoVersion"
-    androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2') {
-        // Necessary if your app targets Marshmallow (since Espresso
-        // hasn't moved to Marshmallow yet)
-        exclude group: 'com.android.support', module: 'support-annotations'
-    }
-    androidTestCompile ('com.android.support.test:runner:0.5') {
-        // Necessary if your app targets Marshmallow (since Espresso
-        // hasn't moved to Marshmallow yet)
-        exclude group: 'com.android.support', module: 'support-annotations'
-    }
-    androidTestCompile ('com.android.support.test.espresso:espresso-contrib:2.2.2'){
-        exclude group: 'com.android.support', module: 'support-annotations'
-        exclude group: 'com.android.support', module: 'design'
-        exclude group: 'com.android.support', module: 'appcompat'
-        exclude group: 'com.android.support', module: 'support-v4'
-        exclude module: 'recyclerview-v7'
-    }
-    androidTestCompile ('com.crittercism.dexmaker:dexmaker-mockito:1.4');
-    androidTestCompile ("com.crittercism.dexmaker:dexmaker-dx:1.4");
+    //memory leak detector
+    debugCompile 'com.squareup.leakcanary:leakcanary-android:1.5.1'
+    releaseCompile 'com.squareup.leakcanary:leakcanary-android-no-op:1.5.1'
+    testCompile 'com.squareup.leakcanary:leakcanary-android-no-op:1.5.1'
+
+    //androidTestCompile "junit:junit:$rootProject.junitVersion"
+    //androidTestCompile "org.mockito:mockito-core:$rootProject.mockitoVersion"
+    //androidTestCompile "com.android.support.test:runner:$rootProject.runnerVersion"
+    //androidTestCompile "com.android.support.test.espresso:espresso-core:$rootProject.espressoVersion"
+    //androidTestCompile "com.android.support.test.espresso:espresso-contrib:$rootProject.espressoVersion"
+
+    //androidTestCompile ('com.crittercism.dexmaker:dexmaker-mockito:1.4');
+    //androidTestCompile ("com.crittercism.dexmaker:dexmaker-dx:1.4");
 
 }
