--- a/build.gradle
+++ b/build.gradle
@@ -2,12 +2,14 @@
 
 buildscript {
     repositories {
-        jcenter(){
-            url "http://jcenter.bintray.com/"
-        }
+//        jcenter(){
+//            url "http://jcenter.bintray.com/"
+//        }
+        jcenter()
+        google()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:2.3.3'
+        classpath 'com.android.tools.build:gradle:3.0.0'
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
@@ -16,16 +18,15 @@ buildscript {
 
 allprojects {
     repositories {
-        maven {
-            url "https://repo.eclipse.org/content/repositories/paho-releases/"
-        }
+        google()
+        jcenter()
 
-        maven { // to use google support library
-            url "https://maven.google.com"
-        }
-        jcenter(){
-            url "http://jcenter.bintray.com/"
-        }
+//        maven { // to use google support library
+//            url "https://maven.google.com"
+//        }
+//        jcenter(){
+//            url "http://jcenter.bintray.com/"
+//        }
     }
 }
 
@@ -34,14 +35,14 @@ ext {
     // Sdk and tools
     targetSdkVersion = 25
     compileSdkVersion = 26
-    buildToolsVersion = '26.0.1'
+    buildToolsVersion = '27.0.1'
 
     // App dependencies
-    supportLibraryVersion = '25.4.0'
+    supportLibraryVersion = '27.0.1'
     constraintLayoutVersion = '1.0.2'
     junitVersion = '4.12'
     mockitoVersion = '1.9.5'
-    runnerVersion = '1.0.0'
-    rulesVersion = '1.0.0'
-    espressoVersion = '3.0.0'
+    runnerVersion = '1.0.1'
+    rulesVersion = '1.0.1'
+    espressoVersion = '3.0.1'
 }
