--- a/.gitmodules
+++ b/.gitmodules
@@ -3,4 +3,4 @@
 	url = https://github.com/STMicroelectronics-CentralLabs/BlueSTSDK_Android.git
 [submodule "BlueSTSDK_Gui_Android"]
 	path = BlueSTSDK_Gui_Android
-	url = https://github.com/STMicroelectronics-CentralLabs/BlueSTSDK_GUI_Android
+	url = https://github.com/STMicroelectronics-CentralLabs/BlueSTSDK_GUI_Android.git
