--- a/BlueMS/build.gradle
+++ b/BlueMS/build.gradle
@@ -146,11 +146,9 @@ dependencies {
     releaseImplementation group: 'com.squareup.leakcanary', name: 'leakcanary-android-no-op', version: '1.5.4'
     testImplementation group: 'com.squareup.leakcanary', name: 'leakcanary-android-no-op', version: '1.5.4'
 
-    //androidTestCompile "junit:junit:$rootProject.junitVersion"
-    //androidTestCompile "org.mockito:mockito-core:$rootProject.mockitoVersion"
-    //androidTestCompile "com.android.support.test:runner:$rootProject.runnerVersion"
-    //androidTestCompile "com.android.support.test.espresso:espresso-core:$rootProject.espressoVersion"
-    //androidTestCompile "com.android.support.test.espresso:espresso-contrib:$rootProject.espressoVersion"
+    androidTestCompile "com.android.support.test:runner:$rootProject.runnerVersion"
+    androidTestCompile "com.android.support.test:rules:$rootProject.rulesVersion"
+    androidTestCompile "com.android.support.test.espresso:espresso-core:$rootProject.espressoVersion"
 
     //androidTestCompile ('com.crittercism.dexmaker:dexmaker-mockito:1.4');
     //androidTestCompile ("com.crittercism.dexmaker:dexmaker-dx:1.4");
