--- a/BlueMS/src/main/AndroidManifest.xml
+++ b/BlueMS/src/main/AndroidManifest.xml
@@ -55,7 +55,7 @@
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
-        android:logo="@drawable/app_logo"
+        android:logo="@drawable/feet_icon_20"
         android:theme="@style/AppTheme">
         <service
             android:name=".demos.fftAmpitude.FFTExportedService"
