--- a/BlueMS/src/main/AndroidManifest.xml
+++ b/BlueMS/src/main/AndroidManifest.xml
@@ -68,7 +68,8 @@
             android:configChanges="keyboardHidden|screenSize"
             android:label="@string/app_name"
             android:launchMode="singleTop"
-            android:theme="@style/FullscreenTheme">
+            android:theme="@style/FullscreenTheme"
+            android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -78,7 +79,8 @@
         <activity
             android:name=".NodeListActivity"
             android:label="@string/title_activity_node_list"
-            android:parentActivityName=".MainActivity">
+            android:parentActivityName=".MainActivity"
+            android:screenOrientation="portrait">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="com.st.BlueMS.MainActivity" />
@@ -87,7 +89,8 @@
             android:name=".DemosActivity"
             android:label="@string/title_activity_demos"
             android:launchMode="singleTop"
-            android:parentActivityName=".NodeListActivity">
+            android:parentActivityName=".NodeListActivity"
+            android:screenOrientation="portrait">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="com.st.BlueMS.NodeListActivity" />
@@ -96,7 +99,8 @@
             android:name=".DemosActivityWesu"
             android:label="@string/title_activity_demos"
             android:launchMode="singleTop"
-            android:parentActivityName=".NodeListActivity">
+            android:parentActivityName=".NodeListActivity"
+            android:screenOrientation="portrait">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="com.st.BlueMS.NodeListActivity" />
@@ -143,14 +147,16 @@
         </activity>
         <activity
             android:name="com.st.BlueSTSDK.gui.AboutActivity"
-            android:parentActivityName=".MainActivity">
+            android:parentActivityName=".MainActivity"
+            android:screenOrientation="portrait">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="com.st.BlueMS.MainActivity" />
         </activity>
         <activity
             android:name="com.st.BlueMS.physiobiometrics.OfflineTestActivity"
-            android:parentActivityName=".MainActivity">
+            android:parentActivityName=".MainActivity"
+            android:screenOrientation="portrait">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="com.st.BlueMS.MainActivity" />
