--- a/BlueMSCloud/build.gradle
+++ b/BlueMSCloud/build.gradle
@@ -1,4 +1,5 @@
 apply plugin: 'com.android.library'
+apply plugin: 'kotlin-android'
 
 android {
     compileSdkVersion rootProject.ext.compileSdkVersion
@@ -57,4 +58,9 @@ dependencies {
     androidTestImplementation group:'androidx.test', name:'runner', version:"$rootProject.androidx_runnerVersion"
     androidTestImplementation group:'androidx.test', name:'rules', version:"$rootProject.androidx_rulesVersion"
     androidTestImplementation group:'androidx.test.espresso', name: 'espresso-core', version:"$rootProject.androidx_espressoVersion"
+    implementation "androidx.core:core-ktx:+"
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
+}
+repositories {
+    mavenCentral()
 }
