Align with ST BLE Sensor V5.2.10
Signed-off-by: Luca Pezzoni <luca.pezzoni@st.com>

--- a/gradle.properties
+++ b/gradle.properties
@@ -32,5 +32,5 @@ android.nonTransitiveRClass=true
 
 #ST
 stLocoApiKey = xxxxxxx
-
+stExportedLibVersion = 1.2.1
 android.defaults.buildfeatures.buildconfig=true
