--- a/st_color_ambient_light/publish.gradle
+++ b/st_color_ambient_light/publish.gradle
@@ -8,7 +8,6 @@
 
 apply plugin: 'maven-publish'
 
-def LIB_VERSION = '1.1.0'
 def LIB_GROUP_ID = 'com.st.color_ambient_light'
 def LIB_ARTIFACT_ID = 'st-color_ambient_light'
 
@@ -37,7 +36,7 @@ afterEvaluate {
             blueStSdk(MavenPublication) {
                 groupId LIB_GROUP_ID
                 artifactId LIB_ARTIFACT_ID
-                version LIB_VERSION
+                version = project.properties['stExportedLibVersion']
                 artifact("$buildDir/outputs/aar/st_color_ambient_light-release.aar")
                 artifact(sourceJar)
 
