--- a/st_ext_config/publish.gradle
+++ b/st_ext_config/publish.gradle
@@ -8,7 +8,6 @@
 
 apply plugin: 'maven-publish'
 
-def LIB_VERSION = '1.0.0'
 def LIB_GROUP_ID = 'com.st.ext_config'
 def LIB_ARTIFACT_ID = 'st-ext_config'
 
@@ -37,7 +36,7 @@ afterEvaluate {
             blueStSdk(MavenPublication) {
                 groupId LIB_GROUP_ID
                 artifactId LIB_ARTIFACT_ID
-                version LIB_VERSION
+                version = project.properties['stExportedLibVersion']
                 artifact("$buildDir/outputs/aar/st_ext_config-release.aar")
                 artifact(sourceJar)
 
