Modify repositories maven

--- a/gradle.properties
+++ b/gradle.properties
@@ -31,6 +31,6 @@ kotlin.code.style=official
 android.nonTransitiveRClass=true
 
 #ST
-stLocoApiKey = xxxxxxx
+stLocoApiKey = Leimen
 stExportedLibVersion = 1.2.1
 android.defaults.buildfeatures.buildconfig=true
